Compile error in monocle dispman

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • jfx14
    • Affects Version/s: jfx11
    • Component/s: javafx

      The DispmanScreen.c file has a void funtion returning 0l, which obviously shouldn't happen.

      It results in a compile error for platforms using this file:

      /home/johan/open-jfx/github/jfx/modules/javafx.graphics/src/main/native-glass/monocle/dispman/DispmanScreen.c: In function 'Java_com_sun_glass_ui_monocle_DispmanScreen_wrapNativeSymbols':
      /home/johan/open-jfx/github/jfx/modules/javafx.graphics/src/main/native-glass/monocle/dispman/DispmanScreen.c:85:12: error: 'return' with a value, in function returning void [-Werror]
           return 0l;

            Assignee:
            Johan Vos
            Reporter:
            Johan Vos
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: