8236484: Compile error in monocle dispman

Reviewed-by: kcr